infra/kubernetes/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      name: auth
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: sivam96/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-serv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 8000
      targetPort: 8000
