infra/kubernetes/ingress-serv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: tickethub.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/auth/?(.*)
            backend:
              service:
                name: auth-serv
                port:
                  number: 8000
          - pathType: Prefix
            path: /db/
            backend:
              service:
                name: mongo-svc
                port:
                  number: 27017
